# dcn-server

./: .gitignore  .gitmodules  AGENTS.md  CHANGELOG.md  CMakeGraphVizOptions.cmake  CMakeLists.txt  README.md  address_8cpp.html  address_8cpp.js  address_8hpp.html  address_8hpp.js  address_8hpp_source.html  annotated.html  annotated_dup.js  api_8cpp.html  api_8cpp.js  api_8hpp.html  api_8hpp.js  api_8hpp_source.html  api__account_8cpp.html  api__account_8cpp.js  api__auth_8cpp.html  api__auth_8cpp.js  api__condition_8cpp.html  api__condition_8cpp.js  api__connector_8cpp.html  api__connector_8cpp.js  api__execute_8cpp.html  api__execute_8cpp.js  api__feature_8cpp.html  api__feature_8cpp.js  api__feed_8cpp.html  api__feed_8cpp.js  api__file_8cpp.html  api__file_8cpp.js  api__format_8cpp.html  api__format_8cpp.js  api__particle_8cpp.html  api__particle_8cpp.js  api__transformation_8cpp.html  (+889 more)
.github/workflows/: build-and-test-debug.yml  build-linux-debug.yml  build-linux-release.yml  build-macos-debug.yml  build-macos-release.yml  build-windows-debug.yml  build-windows-release.yml  build.yml  deploy.yml  test-linux-debug.yml  test-macos-debug.yml  test-windows-debug.yml
cmake/: FetchPT.cmake  RunPTnpm.cmake  add_module.cmake  compile_options.cmake  dependencies.cmake
cmake/toolchains/: toolchain-aarch64.cmake  toolchain-gcc.cmake
include/: decentralised_art.hpp
resources/html/: simple_form.html
resources/js/: auth.js  execute.js  simple_form.js  utils.js
resources/styles/: simple_form.css
search/: all_0.js  all_1.js  all_10.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_1a.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_10.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  classes_c.js  classes_d.js  classes_e.js  defines_1.js  (+87 more)
src/: CMakeLists.txt  main.cpp
src/api/: CMakeLists.txt
src/api/include/: api.hpp
src/api/src/: api.cpp  api_account.cpp  api_auth.cpp  api_condition.cpp  api_connector.cpp  api_execute.cpp  api_feature.cpp  api_feed.cpp  api_file.cpp  api_format.cpp  api_particle.cpp  api_transformation.cpp
src/async/: CMakeLists.txt
src/async/include/: async.hpp  signal_worker.hpp
src/async/src/: async.cpp  signal_worker.cpp
src/auth/: CMakeLists.txt
src/auth/include/: auth.hpp
src/auth/src/: auth.cpp
src/chain/: CMakeLists.txt
src/chain/include/: address.hpp  chain.hpp  chain_interface.hpp  deploy.hpp  execute.hpp  format_hash.hpp  hex.hpp  ingestion.hpp
src/chain/src/: address.cpp  chain.cpp  format_hash.cpp  hex.cpp  ingestion.cpp
src/cmd/include/: cmd.hpp
src/cmd/src/: cmd.cpp
src/config/: CMakeLists.txt
src/config/include/: config.hpp
src/crypto/: CMakeLists.txt
src/crypto/include/: byte_order.hpp  crypto.hpp  keccak256.hpp
src/crypto/src/: crypto.cpp  keccak256.cpp
src/events/: CMakeLists.txt
src/events/include/: decoded_event.hpp  events.hpp  events_archive.hpp  events_feed.hpp  events_hot_store.hpp  events_ingest.hpp  events_runtime.hpp  events_shard.hpp  events_store.hpp  sqlite_hot_store.hpp
src/events/src/: decoded_events.cpp  events.cpp  events_feed.cpp  events_hot_store.cpp  events_ingest.cpp  events_runtime.cpp  events_shard.cpp  rpc_client.cpp  rpc_client.hpp  sqlite_hot_store.cpp
src/evm/: CMakeLists.txt
src/evm/include/: evm.hpp  evm_storage.hpp
src/evm/src/: evm.cpp  evm_storage.cpp
src/file/include/: file.hpp
src/file/src/: file.cpp
src/http/include/: http_codes.hpp  http_headers.hpp
src/http/src/: http_headers.cpp  url.cpp
src/loader/: CMakeLists.txt
src/loader/include/: loader.hpp
src/loader/src/: loader.cpp
src/mainnet/: CMakeLists.txt
src/mainnet/include/: mainnet.hpp
src/mainnet/src/: mainnet.cpp
src/native/include/: native.h
src/parser/include/: parse_error.hpp  parser.hpp
src/parser/src/: parser.cpp
src/pt/: CMakeLists.txt
src/pt/include/: condition.hpp  connector.hpp  error.hpp  execute.hpp  feature.hpp  particle.hpp  particles.hpp  pt.hpp  registry.hpp  samples.hpp  solidity_identifier.hpp  transformation.hpp
src/pt/proto/: condition.proto  connector.proto  execute.proto  feature.proto  particle.proto  particles.proto  samples.proto  transformation.proto
src/pt/src/: condition.cpp  connector.cpp  error.cpp  execute.cpp  feature.cpp  particle.cpp  particles.cpp  registry.cpp  samples.cpp  solidity_identifier.cpp  transformation.cpp
src/registry/: CMakeLists.txt
src/registry/include/: registry.hpp  registry_store.hpp  registry_wal_sync_worker.hpp  sqlite_registry_store.hpp  storage.hpp
src/registry/src/: registry.cpp  registry_wal_sync_worker.cpp  sqlite_registry_store.cpp
src/sepolia/: CMakeLists.txt
src/sepolia/include/: sepolia_backend.hpp
src/sepolia/src/: sepolia_backend.cpp
src/server/: CMakeLists.txt
src/server/include/: route.hpp  route_arg.hpp  route_key.hpp  server.hpp
src/server/src/: route.cpp  route_arg.cpp  route_key.cpp  (+1 more)
src/storage/: CMakeLists.txt
src/utils/: CMakeLists.txt
tests/: CMakeLists.txt
tests/include/: events_sql_assertions.hpp  events_test_harness.hpp  test_connector_helpers.hpp  unit-tests.hpp
tests/install_package/: CMakeLists.txt
tests/src/: api_account.cpp  api_accounts.cpp  api_format.cpp  api_formats.cpp  chain_ingestion.cpp  db_first_runtime.cpp  mainnet_ingestion.cpp  registry.cpp  url.cpp
tests/src/events/: archive_export_prune_tests.cpp  concurrency_backpressure_tests.cpp  decoder_tests.cpp  feed_history_tests.cpp  feed_stream_sse_tests.cpp  finality_reorg_tests.cpp  hot_store_ingest_tests.cpp  maintenance_wal_integrity_tests.cpp  projection_outbox_tests.cpp  recovery_failpoint_tests.cpp
tests/src/pt/: bindings.cpp  condition.cpp  connector.cpp  deploy_entities.cpp  execute.cpp  feature.cpp  format.cpp  initial_deployment.cpp  particle.cpp  proxy_upgrade.cpp  transformation.cpp
tests/src/stress/: events_load.cpp  registry_stress.cpp  tests.cpp
(+23 files in other folders)
